
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {scalar_t__ h_addr; } ;


 unsigned int INADDR_NONE ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 unsigned int inet_addr (char*) ;
 int printf (char*,char*) ;

unsigned int resolv(char *host) {

    struct hostent *hp = ((void*)0);
    unsigned int host_ip;

    host_ip = inet_addr(host);
    if(host_ip == INADDR_NONE) {
        hp = gethostbyname(host);
        if(!hp) {
            printf("\nError: Unable to resolv hostname (%s)\n", host);
            exit(1);
        } else host_ip = *(unsigned int *)hp->h_addr;
    }

    return host_ip;

}
